[package]
name = "arbit-2"
version = "0.1.0"
authors = ["Enos Domingues <enosdomingues@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
